--- a/wiki/adverse.wikitext
+++ b/wiki/adverse.wikitext
@@ -1,14 +1,14 @@
 ==English==
 
 ===Etymology===
-Latin ''[[adversus]]'' 'against, opposite'.
+Latin ''[[adversus]]'', "against", "opposite".
 
-===Adjective===
+====Adjective====
 '''adverse'''
-# Unfavourable.
-# Contrary, hostile.
+# [[unfavourable]]
+# [[contrary]], [[hostile]]
 
-====Translations====
+=====Translations=====
 *German: [[widrig]] (1), [[gegnerisch]] (2)
 
 [[Category:English adjectives]]
