robot  Adding:it <claw#97264>

--- a/wiki/claw.wikitext
+++ b/wiki/claw.wikitext
@@ -19,3 +19,5 @@ Middle English ''[[clawe]]'', from Old English ''[[clawu]]''.
 ====Derived terms====
 *[[claw hammer]]
 *[[get one's claws into]]
+
+[[it:claw]]
