/* Etymology */ fmt <terminus#93167>

--- a/wiki/terminus.wikitext
+++ b/wiki/terminus.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-Latin ''terminus'' boundary, limit
+Latin ''[[terminus#Latin|terminus]]'' "boundary", "limit".
 
 ===Noun===
 '''terminus''' (''plural:'' [[termini]] or [[terminuses]])
