robot  Adding:pl <resume#90092>

--- a/wiki/resume.wikitext
+++ b/wiki/resume.wikitext
@@ -26,3 +26,5 @@ From French ''[[résumer]]'', "to resume", from Latin ''[[resumere]]'', "to take
 
 [[Category:English heteronyms]]
 [[Category:English words with multiple etymologies]]
+
+[[pl:Resume]]
