/* Spanish */ +illegal immigrant smuggler sense <coyote#38263>

--- a/wiki/coyote.wikitext
+++ b/wiki/coyote.wikitext
@@ -54,4 +54,9 @@
 '''coyote''' ''m'' (plural: [[coyotes]])
 
 # coyote
+# A [[smuggler]] of illegal immigrants across the land border from Mexico into the United States of America.<!-- possibly not limited to the Mex/USA case? -->
+
+===See also===
+*[[pollo]] ''m''
+
 [[Category:Nahuatl derivations]]
