--- a/wiki/droop.wikitext
+++ b/wiki/droop.wikitext
@@ -12,15 +12,14 @@ From Middle English '''''[[droupen]]''''' < Old Norse '''''[[drūpa]]'''''
 #to slowly become limp; to bend gradually
 #to lose all [[enthusiasm]] or [[happiness]]
 
-=== Adjective ===
-'''droop'''
-#lacking stiffness
-#:''Sharon's sad, '''drooped''' face lit up when I gave her tickets to see tonight's game.''
-
 === Noun ===
 '''droop'''
 #something which is [[limp]] or [[sag]]ging; a condition or [[posture]] of drooping
 #:''He walked with a discouraged '''droop'''.''
+
+=== Related terms ===
+*[[drooped]]
+*[[droopy]]
 
 === Translations ===
 *French: [[tomber]]
