robot  Adding:pl,it <climatic#97577>

--- a/wiki/climatic.wikitext
+++ b/wiki/climatic.wikitext
@@ -3,3 +3,6 @@
 '''climatic'''
 # of, or relating to, or influenced by [[climate]]
 [[category:English adjectives]]
+
+[[it:climatic]]
+[[pl:Climatic]]
