+illegal immigrant sense; +related & see also <pollo#6465>

--- a/wiki/pollo.wikitext
+++ b/wiki/pollo.wikitext
@@ -1,5 +1,16 @@
-== [[Spanish]] ==
-=== [[noun]] ===
+== Spanish ==
+=== Noun ===
+'''pollo''' ''m'' (plural: [[pollos]])
+
 # [[chicken]]
+# A Mexican paying to be smuggled illegally into the United States of America.<!-- possibly not limited to the Mex/USA case? -->
+
+====Related terms====
+*[[polla]]
+
+===See also===
+*[[coyote]]
+*[[gallina]]
+*[[gallo]]
 
 [[la:Pollo]]
