--- a/wiki/burka.wikitext
+++ b/wiki/burka.wikitext
@@ -26,5 +26,5 @@
 *German: [[Burka]] ''f'' (2)
 
 [[Category:Arabic derivations]]
-[[Category:English:Clothing]]
+[[Category:Clothing]]
 [[Category:Religion]]
