--- a/wiki/breeches.wikitext
+++ b/wiki/breeches.wikitext
@@ -20,4 +20,4 @@ Old English [[brech]], [[brek]], Anglo Saxon [[br&#275;k]], plural of [[brc]] br
 ===See Also===
 *[[pantaloons]]
 
-[[Category:English:Clothing]]
+[[Category:Clothing]]
