--- a/wiki/cardigan.wikitext
+++ b/wiki/cardigan.wikitext
@@ -24,6 +24,6 @@ Named after British military commander [[w:James Thomas Brudenell, 7th Earl of C
 *[[Cardiganshire]]
 *[[pullover]]
 
-[[Category:English:Clothing]]
+[[Category:Clothing]]
 [[Category:English eponyms]]
 [[it:cardigan]]
