--- a/wiki/garment.wikitext
+++ b/wiki/garment.wikitext
@@ -10,7 +10,7 @@
 *German: [[Kleidungsstück]] ''n'' (1)
 *Swedish: [[klädesplagg]] ''n''
 
-[[Category:English Clothing]]
+[[Category:Clothing]]
 
 [[it:garment]]
 [[sv:garment]]
