--- a/wiki/hairshirt.wikitext
+++ b/wiki/hairshirt.wikitext
@@ -17,4 +17,4 @@ English; '''[[hair]]''' + '''[[shirt]]'''
 
 [[Category:English compound words]]
 [[Category:Religion]]
-[[Category:English:Clothing]]
+[[Category:Clothing]]
