--- a/wiki/jacket.wikitext
+++ b/wiki/jacket.wikitext
@@ -23,6 +23,6 @@
 *Russian: [[куртка]] ''f'' (kurtka)
 *Spanish: [[chaqueta]] ''f''
 
-[[Category:English:Clothing]]
+[[Category:Clothing]]
 
 [[it:jacket]]
