--- a/wiki/Jesus_jammies.wikitext
+++ b/wiki/Jesus_jammies.wikitext
@@ -17,7 +17,7 @@ English; '''[[Jesus]]''' + '''[[pajamas]]'''
 * [[Church of Jesus Christ of Latter-Day Saints]]
 * [[Mormonism]]
 
-[[Category:English:Clothing]]
+[[Category:Clothing]]
 [[Category:Colloquial]]
 [[Category:English nouns]]
 [[Category:English slang]]
