--- a/wiki/jumper.wikitext
+++ b/wiki/jumper.wikitext
@@ -4,4 +4,4 @@
 # A [[woolen]] [[sweater]] or [[pullover]].
 # A [[removable]] connecting [[pin]] on an [[electronic]] [[circuit]] board.
 
-[[Category:English:Clothing]]
+[[Category:Clothing]]
