--- a/wiki/sweater.wikitext
+++ b/wiki/sweater.wikitext
@@ -13,7 +13,6 @@
 {|
 ''plural''<br>
 '''sweaters'''
-*[[Pronunciation guide|IPA]]: /ˈswetəs/
 |}
 |}
 
@@ -27,4 +26,4 @@
 =====Translations=====
 *German: [[Sweatshirt]] ''n'' (1), [[Pullover]] ''m'' (2)
 
-[[Category:English:Clothing]]
+[[Category:Clothing]]
