--- a/wiki/turban.wikitext
+++ b/wiki/turban.wikitext
@@ -25,4 +25,4 @@ Persian ''dulband''.
 =====Translations=====
 *German: [[Turban]] ''m'' (1,2)
 
-[[Category:English:Clothing]]
+[[Category:Clothing]]
