--- a/wiki/undergarments.wikitext
+++ b/wiki/undergarments.wikitext
@@ -19,5 +19,5 @@
 * [[hairshirt]]
 
 [[Category:English compound words]]
-[[Category:English:Clothing]]
+[[Category:Clothing]]
 [[Category:Religion]]
