/* Spanish */ +related & see also <gallo#6466>

--- a/wiki/gallo.wikitext
+++ b/wiki/gallo.wikitext
@@ -25,7 +25,14 @@
 '''gallo''' ''m''
 
 # [[rooster]]
-# [[John dory]], a kind of fish (''Zeus faber'')
+# [[John dory]], a kind of fish (''[[Zeus faber]]'')
+
+====Related terms====
+*[[gallina]]
+
+====See also====
+*[[polla]]
+*[[pollo]]
 
 === Proper noun ===
 '''Gallo'''&trade;
@@ -33,8 +40,8 @@
 # popular beer from [[Guatemala]].
 
 ==== Translations ====
-*[[Danish]]: [[hane]]
-*[[English]]: [[Famosa]]&trade; (US) <!-- not sure if this should be classed as a translation or a synonym? it's certainly used in US English vernacular as a product name... -->
+*Danish: [[hane]]
+*English: [[Famosa]]&trade; (US) <!-- not sure if this should be classed as a translation or a synonym? it's certainly used in US English vernacular as a product name... -->
 
 [[fr:gallo]]
 [[it:gallo]]
