--- a/wiki/anatine.wikitext
+++ b/wiki/anatine.wikitext
@@ -1,3 +1,7 @@
-Pertaining to Ducks.
+==English==
+===Noun===
+'''anatine'''
 
-{{wikify}}
+#[[Pertaining]] to [[duck]]s.
+
+[[Category:English nouns]]
