robot  Adding:pl <cluster#90603>

--- a/wiki/cluster.wikitext
+++ b/wiki/cluster.wikitext
@@ -17,3 +17,5 @@ From Old English ''clyster''
 ===Verb===
 '''to cluster'''  ([[clusters]], [[clustered]], [[clustering]])
 # Form into a cluster
+
+[[pl:Cluster]]
