robot  Adding:it <cloture#97242>

--- a/wiki/cloture.wikitext
+++ b/wiki/cloture.wikitext
@@ -7,3 +7,5 @@ French ''[[clôture]]'', closure
 
 #A [[motion]] of a [[legislature]] used to halt debate on an issue and put it to a [[vote]].
 [[category:English nouns]]
+
+[[it:cloture]]
