--- a/wiki/hello.wikitext
+++ b/wiki/hello.wikitext
@@ -48,6 +48,7 @@ This variant of [[hallo]] is sometimes falsely credited to [[w:Thomas Edison|Tho
 <!--Put translations for languages from A to I here-->
 *Czech: [[ahoj]], [[nazdar]]
 *French: [[salut]] (''informal''), [[bonjour]]
+*Indonesian: [[hai]] 
 *Italian: [[ciao]], [[salve#Italian|salve]], [[buongiorno]]
 |}
 | width=1% |
@@ -56,8 +57,8 @@ This variant of [[hallo]] is sometimes falsely credited to [[w:Thomas Edison|Tho
 <!--Put translations for languages from J to Z here-->
 *Latin: [[salve]], [[ave]]
 *Portuguese: [[oi]]
-*Swahili: [[jambo]]
 *Spanish: [[hola]]
+*Swahili: [[jambo]]
 *Swedish: [[hallå]], [[hej]], [[god dag]] (''formal'')
 *Ukrainian: [[привіт]]
 |}
@@ -71,6 +72,7 @@ This variant of [[hallo]] is sometimes falsely credited to [[w:Thomas Edison|Tho
 <!--Put translations for languages from A to I here-->
 *Czech: [[haló]]
 *French: [[allô]]
+*Indonesian: [[halo]]
 *Italian: [[pronto#Italian|pronto]]
 |}
 | width=1% |
@@ -159,7 +161,6 @@ The translations below need to be checked by native speakers and separated into 
 *Hebrew: [[שלום]] (shalom)
 *Hungarian: [[szia]]
 *Icelandic: [[halló]], [[kalla]], [[heilsa]]
-*Indonesian: [[hai]] (1), [[hallo]] (2)
 *Interlingua: [[salute]] (1); [[hallo]] (1,2)
 *Jèrriais: [[buonjour]]
 *Japanese: [[こんにちは]] (konnichiwa) (1, daylight), [[こんばんは]] (konbanwa) (1, after dark), [[もしもし]] (moshi-moshi) (2)
