Fmt, wikify, expand.  Removed "Having somebody add the wrong definition in an online dictionary" <valid#61259>

--- a/wiki/valid.wikitext
+++ b/wiki/valid.wikitext
@@ -1,7 +1,14 @@
+==English==
 ===Adjective===
-
 '''valid'''
 
-#Being of a truthful or factual nature.
-#Being related to the current topic, or presented within context.
-#Having somebody add the wrong definition in an online dictionary.
+#[[truthful]], [[factual]]
+#:''I will believe him as soon as he offers a '''valid''' answer.''
+#[[acceptable]], [[proper]] or [[correct]]
+#:''A '''valid''' format for the date is MM/DD/YY.''
+#:''Do not drive without a '''valid''' license.''
+#[[related]] to the current topic, or presented within context, [[relevant]]
+
+===See also===
+*[[invalid]]
+*[[validate]]
