robot  Modifying:hu <code#37463>

--- a/wiki/code.wikitext
+++ b/wiki/code.wikitext
@@ -62,7 +62,7 @@
 #(''plural of [[coda#Italian|coda]]'') [[tail]]s (''of animals, etc'')
 
 [[it:code]]
-[[hu:Code]]
+[[hu:code]]
 [[nl:code]]
 [[pl:Code]]
 [[fi:Code]]
