--- a/wiki/recline.wikitext
+++ b/wiki/recline.wikitext
@@ -8,9 +8,8 @@ From Latin ''[[reclinare]]'', "to bend back". Confer "[[decline]]", "[[incline]]
 #:''She '''reclined''' her arms on the table and sighed.''
 #''(intransitive)'' to [[lean]] [[back]] 
 #''(intransitive)'' to put one's self in a [[resting]] [[position]]
-===Related terms===
-*to [[decline]]
-*to [[incline]]
-*to [[lie]] down or back .
+====Translations====
+*Spanish: [[reclinarse]]
 
-{{es}} : [[:es:reclinarse]]
+====Related terms====
+[[decline]]; [[incline]]; [[lie down]]; [[lie back]]
