--- a/wiki/anarchism.wikitext
+++ b/wiki/anarchism.wikitext
@@ -1,7 +1,8 @@
 ===Noun===
 '''anarchism'''
 
-# Any theory that proposes the absence of social hierarchy in all its forms
+# Any theory or doctrine that proposes the absence of governments and states
+# Any theory that proposes the absence of social hierarchy in all forms
 # Any political movement that specifically claims the label of "anarchist"
 # Often used to mean [[libertarian socialism]]
 
