/* Related terms */  another related term <droop#99648>

--- a/wiki/droop.wikitext
+++ b/wiki/droop.wikitext
@@ -19,6 +19,7 @@ From Middle English '''''[[droupen]]''''' < Old Norse '''''[[drūpa]]'''''
 
 === Related terms ===
 *[[drooped]]
+*[[drooping]]
 *[[droopy]]
 
 === Translations ===
