--- a/wiki/colonel.wikitext
+++ b/wiki/colonel.wikitext
@@ -9,3 +9,6 @@ First attested [[w:1548|1548]], from {{MF.}} [[coronel]], from Italian [[colonne
 '''colonel''' {{wikipedia}}
 
 #a [[commissioned]] [[officer]] in the [[army]], [[air force]], or [[marine corps]] ranking [[above]] a [[lieutenant]] colonel and [[below]] a [[brigadier]] [[general]]
+
+[[et:Colonel]]
+[[it:colonel]]
