robot  Adding:ru <collide#71798>

--- a/wiki/collide.wikitext
+++ b/wiki/collide.wikitext
@@ -6,3 +6,5 @@
 #To come into [[conflict]], or be [[incompatible]]
 #* Tibet '''collided''' with the modern World
 [[Category:English intransitive verbs]]
+
+[[ru:Collide]]
