robot  Adding:nl <collie#76792>

--- a/wiki/collie.wikitext
+++ b/wiki/collie.wikitext
@@ -4,3 +4,5 @@
 '''collie'''
 #Any of various [[breed]]s of [[dog]] originating in [[Scotland]] as [[sheepdog]]s
 [[Category:Scots derivations]]
+
+[[nl:collie]]
