robot  Adding:it <colourless#94729>

--- a/wiki/colourless.wikitext
+++ b/wiki/colourless.wikitext
@@ -5,3 +5,5 @@
 #(''of a liquid'') [[water white]]
 #[[lacking]] in [[interest]] or [[variety]]
 [[category:English adjectives]]
+
+[[it:colourless]]
