rm existential POV violation <God complex#1636795>

--- a/wiki/God_complex.wikitext
+++ b/wiki/God_complex.wikitext
@@ -2,8 +2,8 @@ A '''God complex''' is a term used to characterize arrogant, individuals prone t
 
 ==God complexes and man-made disasters==
 
-In direct proportion to disparity of wealth and power, the opportunities escalate for individuals to assume inhuman, and sometimes inhumane, dominion over others.  God complexes are often blamed for monumental man made disasters, including [[global warming]] and the [[autism]] epidemic.  As wealth and power is consolidated into the hands of individuals at the helm of ever larger organizations and nations, it has become increasingly evident that powerful, and generally very intelligent, people sometimes do incredibly stupid things that contribute to man-made disasters and compound the tradedy of natural disasters.
- 
+In direct proportion to disparity of wealth and power, the opportunities escalate for individuals to assume inhuman, and sometimes inhumane, dominion over others.  God complexes are often blamed for monumental man made disasters, including [[global warming]].  As wealth and power is consolidated into the hands of individuals at the helm of ever larger organizations and nations, it has become increasingly evident that powerful, and generally very intelligent, people sometimes do incredibly stupid things that contribute to man-made disasters and compound the tradedy of natural disasters.
+
 ==Scholarly research==
 
 There are few academic works specifically addressing God complexes, although a great deal can be found about narcissism.
