robot  Adding:pt,fi <commit#73465>

--- a/wiki/commit.wikitext
+++ b/wiki/commit.wikitext
@@ -30,3 +30,5 @@ To commit a bill (Legislation), to refer or intrust it to a committee or others,
 {{webster}}
 
 [[it:commit]]
+[[pt:Commit]]
+[[fi:Commit]]
