robot  Adding:et,it <commerce#91133>

--- a/wiki/commerce.wikitext
+++ b/wiki/commerce.wikitext
@@ -29,3 +29,6 @@
 # To hold intercourse; to commune.
 #:'''''Commercing''' with himself.''  -Tennyson.
 #:''Musicians ... taught the people in angelic harmonies to '''commerce''' with heaven.''  -Prof. Wilson.
+
+[[et:Commerce]]
+[[it:commerce]]
