--- a/wiki/hen.wikitext
+++ b/wiki/hen.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
-'''hen'''
+'''hen''' ([[hens]])
 
 #A female [[bird]].
 #(''specifically'') A female [[chicken]], especially one kept for its [[egg]]s.
@@ -8,24 +8,24 @@
 
 ====Translations====
 =====female bird=====
-*Danish: høne ''f''
+*Danish: høne ''c''
 *German: [[Weibchen]] ''n''
 =====female chicken=====
 *Chinese: [[母鸡]] (mǔ jī)
-*Danish: høne ''f'',
+*Danish: [[høne]] ''c''
 *Dutch: hen ''f'' (2), [[kip]] ''f'' (2), [[leghen]] ''f'' (2), [[legkip]] ''f'' (2)
 *Estonian [[kana]] (2)
-*[[Finnish]]: [[kana]] (2)
+*Finnish: [[kana]] (2)
 *French: [[poule]] ''f'' (2, 3)
 *German: [[Henne]] ''f'', ''(when kept for laying eggs)'' [[Legehenne]] ''f''
 *Italian: [[gallina]] ''f'' (2)
-*[[Polish]]: [[kura]] ''f''
+*Polish: [[kura]] ''f''
 *Russian: [[курица]] ''f''
 *Slovene: [[kokoš]] ''f'' (2), [[kura]] ''f'' (2), [[koklja]] ''f'' (2) ([[broody]] hen)
 *Swedish: [[höna]] ''c''
 
 =====woman=====
-*Danish: høne ''f'',
+*Danish: [[høne]] ''f'',
 *French: [[poule]] ''f'' (2, 3)
 
 ===See also===
