robot  Adding:fi <competition#7877>

--- a/wiki/competition.wikitext
+++ b/wiki/competition.wikitext
@@ -20,6 +20,8 @@
 *Swedish: [[konkurens]] (1), en [[tävling]] (2)
 *[[Volapük]]: [[mät]], [[mäted]]
 
+[[Category:1000 English basic words]]
+
 [[it:competition]]
 [[pl:Competition]]
-[[Category:1000 English basic words]]
+[[fi:Competition]]
