robot  Adding:it <compartment#99026>

--- a/wiki/compartment.wikitext
+++ b/wiki/compartment.wikitext
@@ -10,3 +10,5 @@ First attested [[w:1564|1564]], from {{MF.}} [[compartiment]], from [[Italian]] 
 #A [[room]], or [[section]], or [[chamber]]
 #:*''"Two men were seated in a [[well-lighted]] [[compartment]] of a [[third-class]] [[carriage]]."''
 #One of the [[part]]s in which an [[area]] is [[subdivided]].
+
+[[it:compartment]]
