robot  Adding:et <composition#71557>

--- a/wiki/composition.wikitext
+++ b/wiki/composition.wikitext
@@ -9,5 +9,6 @@
 #{''Linguistics'') The [[formation]] of [[compound]] [[word]]s from [[separate]] words.
 #(''Printing'') [[Typesetting]].
 
+[[et:Composition]]
 [[it:composition]]
 [[pl:Composition]]
