robot  Adding:nl <complex#7386>

--- a/wiki/complex.wikitext
+++ b/wiki/complex.wikitext
@@ -43,5 +43,7 @@ From Latin ''complex'', from ''[[com-]]'', '''with''', combining form of ''[[cum
 #A [[series]] of [[building]]s with a common [[purpose]], such as a [[university]] or [[military]] base.
 #A [[unreasonable]] dislike of a particular thing.
 #: Jim has a real complex about working for a woman boss.
-[[it:complex]]
 [[Category:1000 English basic words]]
+
+[[it:complex]]
+[[nl:complex]]
