robot  Adding:it <complaint#98133>

--- a/wiki/complaint.wikitext
+++ b/wiki/complaint.wikitext
@@ -7,3 +7,5 @@
 #:''Don't come too close, I've got this nasty '''complaint'''.''
 ====Translations====
 *{{sv}} : [[klagomål]] ''n''
+
+[[it:complaint]]
