--- a/wiki/complain.wikitext
+++ b/wiki/complain.wikitext
@@ -6,5 +6,6 @@
 #To make a [[formal]] [[accusation]] or bring a [[formal]] [[charge]]
 #* They've '''complained''' about me to the police again
 
+[[es:complain]]
 [[it:complain]]
 [[hu:complain]]
