--- a/wiki/amazing.wikitext
+++ b/wiki/amazing.wikitext
@@ -9,7 +9,9 @@
 
 ===Adjective===
 '''amazing'''
-#causing wonder 
+#causing wonder
+#possesing uniquely wonderful qualities
+#Jaimie
 
 ====Translations====
 *'''Finnish''': [[hämmästyttävä]]
