/* Translations */ Added the Japanese pronunciation <sieve#3959>

--- a/wiki/sieve.wikitext
+++ b/wiki/sieve.wikitext
@@ -15,7 +15,7 @@
 *Hebrew: [[נפה]] ''f''
 * {{io}} : [[sivo]]
 *Italian: [[setaccio]] ''m''
-*Japanese: [[ふるい]]
+*Japanese: [[ふるい]] (furui)
 *Korean: [[채]] (chae)
 *Russian: [[сетка]] ''f'' (setka)
 *Spanish: [[tamiz]] ''m'', [[cernir]] ''m'' (for solids), [[colar]] ''m'' (for liquids)
