robot  Adding:pl <compulsion#99355>

--- a/wiki/compulsion.wikitext
+++ b/wiki/compulsion.wikitext
@@ -8,3 +8,5 @@ From late {{L.}} '''''[[compulsiō]]'''''
 === Noun ===
 #an [[irrational]] need to perform some action, often despite negative consequences.
 #:''During the basketball game, I had a sudden '''compulsion''' to [[smoke]]; however, I did not have any cigarettes with me.''
+
+[[pl:Compulsion]]
