robot  Adding:fi <comprise#61436>

--- a/wiki/comprise.wikitext
+++ b/wiki/comprise.wikitext
@@ -13,3 +13,5 @@
 #*''Note: this usage is often considered incorrect. The example above in the passive means the fifty states comprise the Union, which is incorrect. Strictly speaking, the Union comprises fifty states, whereas fifty states '''compose''' the Union. See [[compose]]''
 
 [[Category:Disputed usage]]
+
+[[fi:Comprise]]
