+verb sense, wikify <sieve#3959>

--- a/wiki/sieve.wikitext
+++ b/wiki/sieve.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''sieve''' ([[sieves]])
 
-# A device to separate larger objects from smaller objects, or to separate solid objects from a liquid.
+# A device to separate larger objects from smaller objects, or to separate [[solid]] objects from a [[liquid]].
 
 ====Translations====
 *[[Basque]]: [[bahe]]
@@ -22,3 +22,8 @@
 *Turkish: [[süzgeç]]
 
 [[sv:sieve]]
+
+
+===Transitive verb===
+'''sieve'''
+#to [[strain]], [[sift]] or [[sort]] using a sieve
