--- a/wiki/amazing.wikitext
+++ b/wiki/amazing.wikitext
@@ -1,22 +1,20 @@
 ==English==
 
-===Noun===
-'''amazing'''
-#action when something is causing [[wonder]]
-
-====Translations====
-*'''Finnish''': [[hämmästyttäminen]]
-
 ===Adjective===
 '''amazing'''
-#causing wonder
-#possesing uniquely wonderful qualities
-#Jaimie
+# causing wonder; possesing uniquely wonderful qualities
 
 ====Translations====
 *'''Finnish''': [[hämmästyttävä]]
 *'''French''': [[étonnant]]
 *'''Russian''': [[:ru:изумительный|изумительный]]
+
+===Noun===
+'''amazing'''
+# action when something is causing [[wonder]]
+
+====Translations====
+*'''Finnish''': [[hämmästyttäminen]]
 
 [[it:amazing]]
 [[Category:Positive words]]
