+related & see also; +danish <cockerel#55482>

--- a/wiki/cockerel.wikitext
+++ b/wiki/cockerel.wikitext
@@ -1,5 +1,16 @@
 ==English==
 ===Noun===
-'''cockerel'''
+'''cockerel''' ([[cockerels]])
 
 #A young male [[chicken]].
+
+====Related terms====
+*[[cock]]
+
+====Translations====
+*Danish: [[hanekylling]]
+
+====See also====
+*[[chicken]]
+*[[hen]]
+*[[rooster]]
