robot  Adding:et <conclusion#71805>

--- a/wiki/conclusion.wikitext
+++ b/wiki/conclusion.wikitext
@@ -7,6 +7,7 @@
 #(''logic'') In a [[syllogism]], the [[proposition]] that [[follow]]s from the [[premises]]; a [[deduction]]
 [[Category:English nouns]]
 
+[[et:Conclusion]]
 [[it:conclusion]]
 [[pl:Conclusion]]
 [[sv:conclusion]]
