robot  Adding:de <conclave#47141>

--- a/wiki/conclave.wikitext
+++ b/wiki/conclave.wikitext
@@ -17,6 +17,7 @@ French from Latin ''conclave'', a room that may be locked up; ''[[con-]] + ''[[c
 *[[clave]]
 *[[clavis]]
 
+[[de:conclave]]
 [[fr:conclave]]
 [[it:conclave]]
 [[pl:Conclave]]
