/* Origins of the term */ <planned obsolescence#2865646>

--- a/wiki/planned_obsolescence.wikitext
+++ b/wiki/planned_obsolescence.wikitext
@@ -53,7 +53,7 @@ To justify himself, Packard then hijacked the term Planned Obsolescence in his b
 
 Psychological Obsolescence was more or less in keeping with Stevens’ original definition, though Packard’s interpretation was that there was a sinister motive behind it. He said that the approach behind Psychological Obsolescence was to make the product “old-fashioned, conspicuously non-modern.” In other words, he said that Stevens was brainwashing the customers into believing that the old product they owned was no longer good enough, now that there was an updated, modern and more desirable version available. 
 
-The second one, Functional Obsolescence, was equally manipulative of the consumer, in Packard’s view. He said that Stevens was designing products deliberately so that they’d wear our or break in the future - the consumer would be forced to buy another one and keep Stevens in business.  Brooks Stevens had never intended his definition to be interpreted in this way, and he found himself having to defend himself against Packard’s definition of functional obsolescence.
+The second one, Functional Obsolescence, was equally manipulative of the consumer, in Packard’s view. He said that Stevens was designing products deliberately so that they would wear out or break in the future - the consumer would be forced to buy another one and keep Stevens in business.  Brooks Stevens had never intended his definition to be interpreted in this way, and he found himself having to defend himself against Packard’s definition of functional obsolescence.
 
 One of Vance Packard's criticisms of planning for Functional Obsolescence was related to an ethical principle. He believed that manipulating a customer into buying a new product before the old one had come to the end of its life was fuelling wastefulness. However, Brooks Stevens was not taken aback by Packard’s harsh denunciations of his design philosophy. He dismissed Packard’s book “Wastemakers” as a scare headline book. (129). He believed that all publicity was good publicity, so he was unfazed by other people’s objections, and he enjoyed the infamy.
 
