robot  Adding:it <congratulate#90051>

--- a/wiki/congratulate.wikitext
+++ b/wiki/congratulate.wikitext
@@ -12,3 +12,5 @@ From Latin ''[[congratulari]]'', from ''[[gratus]]'', "pleasing".
 ===Derived terms===
 *[[congratulation]]
 *[[congratulations]]
+
+[[it:congratulate]]
