+wikipedia, fmt...what are gumboots?? <Apeliotes#99656>

--- a/wiki/Apeliotes.wikitext
+++ b/wiki/Apeliotes.wikitext
@@ -1,1 +1,5 @@
-Apeliotes, the Greek god of the south east winds. Apeliotes is often depicted wearing gumboots and carrying fruit.
+==English==
+===Proper noun===
+'''Apeliotes'''
+{{wikipedia}}
+#(''Greek mythology'') , the Greek [[god]] of the south east [[wind]]s. Apeliotes is often depicted wearing [[gumboots]] and carrying [[fruit]].
