robot  Adding:nl <conjunctivitis#63623>

--- a/wiki/conjunctivitis.wikitext
+++ b/wiki/conjunctivitis.wikitext
@@ -3,7 +3,9 @@
 '''conjunctivitis'''
 #an [[inflammation]] of the [[conjunctiva]] (the outermost layer of the [[eye]] and the inner surface of the [[eyelid]]s), often due to [[infection]].
 
-[[pl:Conjunctivitis]]
 ===See also===
 [[pinkeye]]
 {{pedialite}}
+
+[[nl:conjunctivitis]]
+[[pl:Conjunctivitis]]
