robot  Adding:fr,it <conscience#94166>

--- a/wiki/conscience.wikitext
+++ b/wiki/conscience.wikitext
@@ -9,3 +9,6 @@ Latin ''[[conscientia]]'' 'knowledge winin oneself', from ''[[scire]]'' 'to know
 ===Noun===
 '''conscience'''
 # A person's [[moral]] [[sense]] of [[right]] and [[wrong]], chiefly as it affects thier own behaviour.
+
+[[fr:conscience]]
+[[it:conscience]]
