removed bad templates <piano#8128>

--- a/wiki/piano.wikitext
+++ b/wiki/piano.wikitext
@@ -28,7 +28,7 @@ Short form of '''[[pianoforte]]''', from Italian '''[[piano]]''' (soft) + '''[[f
 *French: piano ''m'' (''on this page'')
 *German: [[Klavier]] ''n'', Piano ''n''
 *Hebrew: [[פסנתר]] (psanter, after an unknown musical instrument mentioned in the [[w:book of Daniel|book of Daniel]])
-*{{ga}}: [[pianó]]
+*Irish: [[pianó]]
 *Italian: [[pianoforte]] ''m'', piano ''m''
 *Japanese: [[ピアノ]]
 *Korean: [[피아노]]
@@ -36,7 +36,7 @@ Short form of '''[[pianoforte]]''', from Italian '''[[piano]]''' (soft) + '''[[f
 *Polish: [[pianino]]
 *Romanian: Pian ''n''
 *Russian: [[рояль]] (royal')
-*{{sk}}: [[klavír#Slovak|klavír]] ''m''
+*Slovak: [[klavír#Slovak|klavír]] ''m''
 *Turkish: [[piyano]]
 
 ===See also===
@@ -52,7 +52,7 @@ Short form of '''[[pianoforte]]''', from Italian '''[[piano]]''' (soft) + '''[[f
 
 ====Translations====
 *German: [[piano#German|piano]]
-*{{sk}}: [[piano#Slovak|piano]]
+*Slovak: [[piano#Slovak|piano]]
 
 ===Related Terms===
 *[[mezzo-piano]]
