robot  Adding:fi <conspiracy#53413>

--- a/wiki/conspiracy.wikitext
+++ b/wiki/conspiracy.wikitext
@@ -14,3 +14,4 @@ It is generally accepted that conspire comes from the [[Latin]] roots con, with,
 *[[conspire]]
 
 [[it:conspiracy]]
+[[fi:Conspiracy]]
