--- a/wiki/convulsion.wikitext
+++ b/wiki/convulsion.wikitext
@@ -2,6 +2,12 @@
 '''convulsion'''
 <!-- definition needed.. -->
 
+1. An intense, [[paroxysmal]], involuntary muscular contraction.
+
+2. An uncontrolled fit, as of laughter; a [[paroxysm]].
+
+3. Violent turmoil.
+
 ====Translations====
 
 *Finnish: [[kouristus]]
