--- a/wiki/row.wikitext
+++ b/wiki/row.wikitext
@@ -101,3 +101,4 @@ Unclear. Some suggest back-fromation from "to [[rouse]]"
 [[es:row]]
 [[ru:Row]]
 [[Category:English words with multiple etymologies]]
+[[Category:English heteronyms]]
