--- a/wiki/augment.wikitext
+++ b/wiki/augment.wikitext
@@ -2,7 +2,7 @@
 From Latin verb ''[[augēre]]'', "to increase"
 
 ===Verb===
-'''to augment''' (''[[augments]]'', ''[[augmenting]]'', ''[[augmented]]'')
+'''to augment''' ('''[[augments]]''', '''[[augmenting]]''', '''[[augmented]]''')
 
 # to [[increase]], make [[large]]r or [[supplement]]
 #:''The money from renting out a spare room can '''augment''' a salary.''
@@ -10,19 +10,19 @@ From Latin verb ''[[augēre]]'', "to increase"
 #(''music'') to increase an [[interval]] by a half [[step]] ([[chromatic]] [[semitone]])
 #(''music'') to increase the largest interval in a [[triad]], especially a [[fifth]] or a [[sixth]], by a half-step (chromatic semitone)
 
-=== Translations ===
-*[[Bitruscan]]: [[macima]]
-*[[Chinese]]: [[增加]]
-*[[Dutch]]: [[verhogen]]
-*[[Ekspreso]]: [[augmenter]]
-*[[French]]: [[augmenter]] 
-*[[German]]: [[vermehren]] (1), [[vergrößern]] (1)
-*[[Interlingua]]: [[augmentar]] 
-*[[Italian]]: [[aumentare]] 
-*[[Latin]]: [[augmentare]]
-*[[Norwegian]]: [[økning]]
-*[[Portuguese]]: [[aumentar]] 
-*[[Spanish]]: [[aumentar]] 
-*[[Volapük]]: [[xäinön]]
+==== Translations ====
+*Bitruscan: [[macima]] (1)
+*Chinese: [[增加]] (1)
+*Dutch: [[verhogen]] (1)
+*Ekspreso: [[augmenter]] (1)
+*French: [[augmenter]] (1)
+*German: [[vermehren]] (1), [[vergrößern]] (1)
+*Interlingua: [[augmentar]] (1) 
+*Italian: [[aumentare]] (1)
+*Latin: [[augmentare]] (1)
+*Norwegian: [[økning]] (1)
+*Portuguese: [[aumentar]] (1)
+*Spanish: [[aumentar]] (1)
+*Volapük: [[xäinön]] (1)
 
 [[it:augment]]
