robot  Adding:et <contestation#61469>

--- a/wiki/contestation.wikitext
+++ b/wiki/contestation.wikitext
@@ -7,4 +7,5 @@
 #The act of contesting; emulation; rivalry; strife; dispute.
 #Proof by witness; attestation; testimony.
 
+[[et:Contestation]]
 [[pl:Contestation]]
