--- a/wiki/ceramic.wikitext
+++ b/wiki/ceramic.wikitext
@@ -17,6 +17,7 @@ a hard brittle material that is produced through burning of nonmetallic [[minera
 *Russian: [[Керамика]] (keramika)
 *Romanica: [[ceramica]] ''f''
 *Swedish: [[keramik]]
+*{{uk}}: [[кераміка]] (keramika)
 
 {{Wikipedia}}
 
