--- a/wiki/convulsive.wikitext
+++ b/wiki/convulsive.wikitext
@@ -1,12 +1,9 @@
-===Adjective===
+== English ==
+=== Adjective ===
 '''convulsive'''
+#marked by or having the nature of convulsions
+#having or producing convulsions
 
-1. Marked by or having the nature of convulsions.
-
-2. Having or producing convulsions.
-
-===Related Terms===
-
-[[convulse]]
-
-[[convulsion]]
+===Related terms===
+*[[convulse]]
+*[[convulsion]]
