robot  Adding:pl <contrite#93265>

--- a/wiki/contrite.wikitext
+++ b/wiki/contrite.wikitext
@@ -3,3 +3,5 @@
 ===Adjective===
 '''contrite'''
 #[[penitent]], or feeling [[regret]] or [[sorrow]], especially for one's own [[action]]s; [[apologetic]]
+
+[[pl:Contrite]]
