--- a/wiki/Xerxis.wikitext
+++ b/wiki/Xerxis.wikitext
@@ -18,3 +18,8 @@
 
 ===Translations===
 *English: [[Xerxes]]
+*Greek: [[Ξέρξης]]
+**Ancient Transliteration: Xerxes
+*Modern Transliteration: Xerxis
+*Italian: [[Serse]]?
+*{{uk}}: [[Ксеркс]] (Kserks)
