--- a/wiki/Xerxis.wikitext
+++ b/wiki/Xerxis.wikitext
@@ -20,6 +20,6 @@
 *English: [[Xerxes]]
 *Greek: [[Ξέρξης]]
 **Ancient Transliteration: Xerxes
-*Modern Transliteration: Xerxis
+**Modern Transliteration: Xerxis
 *Italian: [[Serse]]?
 *{{uk}}: [[Ксеркс]] (Kserks)
