wikify; typo <fecund#79502>

--- a/wiki/fecund.wikitext
+++ b/wiki/fecund.wikitext
@@ -5,7 +5,7 @@ Latin ''[[fecundus]]''.
 
 ===Adjective===
 '''fecund'''
-# Highy [[fertile]]; able to produce offspring.
+# [[high]]ly [[fertile]]; able to [[produce]] [[offspring]]
 
 ====Related terms====
 *[[fecundity]] (noun)
