robot  Adding:hu,gl <convertible#97294>

--- a/wiki/convertible.wikitext
+++ b/wiki/convertible.wikitext
@@ -2,3 +2,6 @@
 # [[car]] whose [[roof]] can be removed
 ====Translations====
 *French: [[cabriolet]] ''m''
+
+[[gl:Convertible]]
+[[hu:Convertible]]
