--- a/wiki/BOGOF.wikitext
+++ b/wiki/BOGOF.wikitext
@@ -2,9 +2,10 @@
 ===Etymology===
 Acronym from 'Buy One Get One Free'
 ===Adverb===
-'''BOGOF''' (also Bogof)
+'''BOGOF''' (also bogof)
 # In [[marketing]], describes a [[promotion]] in which two [[products]] are sold for the price of one.
 # In general use, describes the aquisition, expected or otherwise, of twice the amount of any item, for the same expenditure.
+
 ===Noun===
 '''BOGOF''' (also Bogof)
 # An item sold through a BOGOF promotion.
