--- a/wiki/BOGOF.wikitext
+++ b/wiki/BOGOF.wikitext
@@ -7,8 +7,9 @@ Acronym from 'Buy One Get One Free'
 # In general use, describes the aquisition, expected or otherwise, of twice the amount of any item, for the same expenditure.
 
 ===Noun===
-'''BOGOF''' (also Bogof)
+'''BOGOF''' (also bogof)
 # An item sold through a BOGOF promotion.
+
 ===Quotations===
 *The other day in the supermarket, I found myself surrounded by "buy one, get one free" promotions, tempting everyone to fill their baskets with things they hadn't intended to buy. Just like the supermarket, New Labour is running Britain's first '''BOGOF''' election campaign &mdash; ''Labour's two-for-one whammy'', Ian Duncan Smith, The Guardian, 20 April 2005
 *At the Big Food Group, the new team headed by Bill Grimsey was quick to discover that turning the company around might be more difficult than it thought because of double counting of revenues as a result of '''bogof''' (buy one, get one free) promotions &mdash; ''Nothing to be Smug About'', Alex Brummer, London Evening Standard, 13 November 2002.
