+etym, +pronunciation <kiln#67031>

--- a/wiki/kiln.wikitext
+++ b/wiki/kiln.wikitext
@@ -1,3 +1,9 @@
 ==English==
+=== Etymology ===
+From the Middle English ''[[kilne]]'' from the Old English ''[[cyln]]'' from the Latin ''[[culina]]'' "kitchen, kitchen stove"
+
+=== Pronunciations ===
+*{{SAMPA}} /ki5n/ ''or'' /ki5/
+*{{IPAlink}} {{IPA|/kɪɫn/ ''or'' /kɪɫ/}}
 ===Noun===
 #An [[oven]] for firing [[ceramic]]s.
