+stub spanish article <solo#71247>

--- a/wiki/solo.wikitext
+++ b/wiki/solo.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
-'''solo'''
+'''solo''' ([[solos]])
 
 #A piece of music for one performer.
 #A job or performance (e.g., an airplane flight) done by one person alone.
@@ -11,3 +11,18 @@
 
 #Without a companion / instructor
 #Of, for, or played as a musical solo.
+
+===Derived terms===
+*[[soloist]]
+
+----
+
+==Sanish==
+===Adjective===
+'''solo''' ''m'' (f: [[sola]])
+
+# [[single]]
+{{stub}}
+
+===See also===
+*[[sólo]]
