robot  Adding:fr <cookie#64890>

--- a/wiki/cookie.wikitext
+++ b/wiki/cookie.wikitext
@@ -77,4 +77,5 @@ From Dutch [[koekje]] (possibly through dialectal variation ''koekie''), diminut
 [[Category:Dutch derivations]]
 
 [[de:Cookie]]
+[[fr:cookie]]
 [[fi:Cookie]]
