--- a/wiki/cook.wikitext
+++ b/wiki/cook.wikitext
@@ -123,6 +123,8 @@ The translations below need to be checked by native speakers and inserted into t
 *[[cook the books]]
 *[[cook up]]
 
+[[Category:1000 English basic words]]
+
 [[it:cook]]
 [[hu:Cook]]
-[[Category:1000 English basic words]]
+[[pl:Cook]]
