--- a/wiki/thoughtless.wikitext
+++ b/wiki/thoughtless.wikitext
@@ -3,11 +3,13 @@
 
 1. Marked by or showing lack of due thought or care; careless.
 
-2. Inconsiderate; inattentive 
-   ''A thoughtless remark.''
+2. Inconsiderate; inattentive.
 
-3. Lacking thought
-   ''The debate turned into thoughtless bickering.''
+''A thoughtless remark.''
+
+3. Lacking thought.
+
+''The debate turned into thoughtless bickering.''
 
 ===Related Terms===
 [[careless]]
