--- a/wiki/immeasurable.wikitext
+++ b/wiki/immeasurable.wikitext
@@ -4,11 +4,12 @@
 # [[impossible]] to [[measure]]
 # [[vast]]
 ====Synonyms====
-# [[unmeasureable]]
-# [[immensurable]]
+#[[immensurable]]; [[immeasurable]]; [[unmeasurable]]
+#[[immensurable]]; [[immeasurable]]; [[unmeasurable]]
 
 ====Antonyms====
 #[[measurable]]
+
 ====Translations====
 *Dutch: [[onmeetbaar]]
 *German: [[unmeßbar]] (1), [[unermeßlich]] (2)
