--- a/wiki/immeasurable.wikitext
+++ b/wiki/immeasurable.wikitext
@@ -4,8 +4,8 @@
 # [[impossible]] to [[measure]]
 # [[vast]]
 ====Synonyms====
-#[[immensurable]]; [[immeasurable]]; [[unmeasurable]]
-#[[immensurable]]; [[immeasurable]]; [[unmeasurable]]
+#[[immensurable]]; [[unmeasurable]]
+#[[immensurable]]; [[unmeasurable]]
 
 ====Antonyms====
 #[[measurable]]
