robot  Adding:fi <copper#4774>

--- a/wiki/copper.wikitext
+++ b/wiki/copper.wikitext
@@ -249,7 +249,9 @@ http://elements.vanderkrogt.net/elem/cu.html
 
 [[Category:Chemical elements]]
 
+[[Category:1000 English basic words]]
+
 [[it:copper]]
 [[la:Copper]]
 [[pl:Copper]]
-[[Category:1000 English basic words]]
+[[fi:Copper]]
