it's an adverb :) <sólo#99674>

--- a/wiki/s%C3%B3lo.wikitext
+++ b/wiki/s%C3%B3lo.wikitext
@@ -1,9 +1,8 @@
 ==Sanish==
-<!-- adverb, adjective, both? -->
+=== Adverb ===
 '''sólo'''
-
-# [[only]]
-{{stub}}
+# [[only]], [[just]]
+# ''Sólo queiro salir.'' - "I just want to leave."
 
 ===See also===
 *[[solo]]
