--- a/wiki/BOGOF.wikitext
+++ b/wiki/BOGOF.wikitext
@@ -15,3 +15,5 @@ Acronym from 'Buy One Get One Free'
 *At the Big Food Group, the new team headed by Bill Grimsey was quick to discover that turning the company around might be more difficult than it thought because of double counting of revenues as a result of '''bogof''' (buy one, get one free) promotions &mdash; ''Nothing to be Smug About'', Alex Brummer, London Evening Standard, 13 November 2002.
 ===Homophones===
 # [[Bog Off]]
+===External Link===
+*[http://www.macmillandictionary.com/essential/resources/new-030512-BOGOF.htm Word of the Week article covering BOGOF] &mdash; on the MacMillan Essential Dictionary Resource Site.
