more senses! :) <solo#71247>

--- a/wiki/solo.wikitext
+++ b/wiki/solo.wikitext
@@ -16,13 +16,12 @@
 *[[soloist]]
 
 ----
-
-==Sanish==
+==Spanish==
 ===Adjective===
 '''solo''' ''m'' (f: [[sola]])
-
-# [[single]]
-{{stub}}
+# [[sole]]; [[only]]; [[unique]]
+# [[lonely]]
+# [[alone]]
 
 ===See also===
 *[[sólo]]
