cleanup; Wikify; rephrase alleged POV - increasing prevalence verified by M.I.N.D. Institute study, cause must be environmental, as unprecedented 'genetic epidemic' theory discounted <God complex#1636795>

--- a/wiki/God_complex.wikitext
+++ b/wiki/God_complex.wikitext
@@ -1,28 +1,27 @@
-A '''God complex''' is a term used to characterize arrogant, individuals prone to [[stupid]] actions, despite their being highly educated, worldly, or powerful.  A person with a God complex is said to suffer from the delusion he or she is, at the very least, the Almighty's gift to the world.  Terms such as [[group think]], [[expert worship]], and '[[God]] complex' have been coined to explain various incarnations of this phenomenon. 
+A '''God complex''' is a term used to characterize [[arrogant]], individuals prone to [[stupid]] actions, despite their being highly educated, worldly, or powerful.  A person with a [[God]] complex is said to suffer from the [[delusion]] he or she is, at the very least, the [[Almighty|Almighty's]] gift to the world.  Terms such as [[group think]], [[expert worship]], and 'God complex' have been coined to explain various incarnations of this phenomenon. 
 
 ==God complexes and man-made disasters==
 
-In direct proportion to disparity of wealth and power, the opportunities escalate for individuals to assume inhuman, and sometimes inhumane, dominion over others.  God complexes are often blamed for monumental man made disasters, including [[global warming]].  As wealth and power is consolidated into the hands of individuals at the helm of ever larger organizations and nations, it has become increasingly evident that powerful, and generally very intelligent, people sometimes do incredibly stupid things that contribute to man-made disasters and compound the tradedy of natural disasters.
+In direct proportion to a given disparity of [[wealth]] and [[power]], the opportunities escalate for individuals to assume [[inhuman]], and sometimes [[inhumane]], [[dominionist|dominion]] over others.  God complexes are sometimes blamed for monumental man made disasters, including [[global warming]] and the apparently escalating prevalence of [[autism epidemic|autism]] diagnoses.  As wealth and power is consolidated into the hands of individuals at the helm of ever larger organizations and nations, it has become increasingly evident that powerful, and generally very intelligent, people sometimes do incredibly stupid things that contribute to man-made disasters, or compound the tradedy of natural disasters.
 
 ==Scholarly research==
 
-There are few academic works specifically addressing God complexes, although a great deal can be found about narcissism.
+There are few academic works specifically addressing God complexes, although a great deal can be found about [[narcissism]].
 
-Psychiatry has offered alternative terminology, such as 'compensatory narcissistic personality disorder' corresponds to [[Ernest Jones]]'s 'narcissistic God Complex', Heinz Kohut's narcissistic personality disorder', and Theodore Millon's 'Compensatory Narcissist'.
+Psychiatry has offered alternative terminology, such as 'compensatory narcissistic personality disorder', which corresponds to [[Ernest Jones]]'s 'narcissistic God Complex', Heinz Kohut's 'narcissistic personality disorder', and Theodore Millon's 'Compensatory Narcissist'.
 
-
-In the book ''All Mighty: A Study of the God Complex in Western Man'', by Horst Richter (ISBN 0897930282), [[authoritarian]] [[compulsion|compulsions]] are related to the rebellious stage of childhood development.  Richter examines how the arrested development of such compulsions leads to denial of suffering, self-doubt, and death, and an expectation of [[servile|servility]] for women and minorities. 
-
+In the book ''All Mighty: A Study of the God Complex in Western Man'', by [[Horst Richter]] (ISBN 0897930282), [[authoritarian]] [[compulsion|compulsions]] are related to the [[rebel|rebellious]] stage of childhood development.  Richter examines how the arrested development of such compulsions leads to denial of suffering, self-doubt, and death, and an expectation of [[servile|servility]] for women and minorities. 
 
 ==Quotes==
 
-"Only two things are infinite, the universe and human stupidity, and I'm not sure about the former."  (Attribution unverified) Albert Einstein
+"Only two things are infinite, the universe and human stupidity, and I'm not sure about the former."  (Attribution unverified) [[Albert Einstein]]
 
 ==External links==
 
 * [http://www.larouchepub.com/other/interviews/2005/3205_justin_frank.html LaRouchePub.com] - '"God Complex" Helps Bush Deal with Anxiety'  issue of ''Executive Intelligence Review'' Interview with Dr. Justin Frank (February 4, 2005)
 * [http://www.mclemee.com/id97.html McLemee.com] - 'The Shrink with a God Complex' Ronald Hayman ''Newsday'', (April 22, 2001) 
 * [http://news-service.stanford.edu/news/2003/september10/caligula-910.html News-Service.Stanford.edu] - 'Did Caligula have a God complex?  Stanford, Oxford archaeologists find evidence that depraved tyrant annexed sacred temple', John Sanford (September 10, 2003)
+
 
 [[Category:psychology]]
 [[Category:psychiatry]]
