robot  Adding:pl,hu,gl <corbata#97855>

--- a/wiki/corbata.wikitext
+++ b/wiki/corbata.wikitext
@@ -11,3 +11,7 @@ cor-BAT-ta
 *[[Camiseta]] - [[Shirt]]
 *[[Traje]] - [[Suit]]
 *[[Pantalones]] - [[Trousers]]
+
+[[gl:Corbata]]
+[[hu:Corbata]]
+[[pl:Corbata]]
