robot  Adding:pt <cornerstone#95888>

--- a/wiki/cornerstone.wikitext
+++ b/wiki/cornerstone.wikitext
@@ -5,3 +5,5 @@
 # A [[stone]] that forms the [[base]] of a [[corner]] of a building, joining two walls.
 # A vital part or basis.
 ::* ''Sugar was the cornerstone of the country's economy.''
+
+[[pt:Cornerstone]]
