robot  Adding:fi <corner#72310>

--- a/wiki/corner.wikitext
+++ b/wiki/corner.wikitext
@@ -197,3 +197,4 @@ Old French ''corniere'', cornier, Late Latin ''cornerium'', corneria, from Latin
 *''To pick corners'' - To choose a preference (as in predicting which boxer will win a match).
 
 [[it:corner]]
+[[fi:Corner]]
