--- a/wiki/cornea.wikitext
+++ b/wiki/cornea.wikitext
@@ -26,3 +26,6 @@ From Latin ''[[cornea tela]]'', horny tissue, from ''[[cornu]]'', horn
 '''cornea''' ''f'' (''plural'' '''cornee''')
 
 #cornea
+
+[[nl:cornea]]
+[[pl:Cornea]]
