fmt; +en irreg pl cat <vagina#50717>

--- a/wiki/vagina.wikitext
+++ b/wiki/vagina.wikitext
@@ -1,5 +1,4 @@
-=={{en}}==
-[[Category:English nouns]]
+==English==
 ===Pronunciation===
 */vəjī'''ʹ'''nə/
 *[vəˈdʒaɪnə]
@@ -10,26 +9,30 @@ From Latin '''vāgīna''', ''sheath''.
 '''vagina''' (''Plural:'' [[vaginas]] or [[vaginae]])
 
 n. pl. vaginas or vaginae
-#''Anatomy''
-#*The passage leading from the opening of the [[vulva]] to the [[cervix]] of the [[uterus]] in [[female]] [[mammal]]s.
-#*A similar part in some invertebrates.
-#''Botany''
-#*A sheathlike structure, such as the leaf of a grass that surrounds a stem.
+#(''Anatomy'')
+##The passage leading from the opening of the [[vulva]] to the [[cervix]] of the [[uterus]] in [[female]] [[mammal]]s.
+##A similar part in some invertebrates.
+#(''Botany'') A sheathlike structure, such as the leaf of a grass that surrounds a stem.
 
 ====Translations====
-*Chinese: <!-- put the actual Chinese word, not the Pinyin, here -->
+*Chinese: [[yin1dao4]]
 *German: [[Scheide]] ''f'' (1), [[Vagina]] ''f'' (1)
 *Portuguese: [[Vagina]] ''f'' (1)
 
 ====Derived Terms====
 *[[vaginal]]
 
-=={{la}}==
-[[Category:Latin language]]
+[[Category:English nouns]]
+[[Category:English irregular plurals]]
+
+==Latin==
 ===Noun===
 '''vāgīna''' ''f'' ''[[Wiktionary Appendix:Latin first declension|1st declension]]
 
 #a [[sheath]]
+
+[[Category:Latin language]]
+
 
 [[de:Vagina]]
 [[es:vagina]]
