+es article; sort ga article to correct pos <mi#2677>

--- a/wiki/mi.wikitext
+++ b/wiki/mi.wikitext
@@ -30,7 +30,7 @@ Dutch: mi
 
 ----
 
-==Esperanto==
+==[[Esperanto]]==
 ===Pronunciation===
 * [[Wiktionary:Pronunciation_key|IPA]]: /mi/
 * [[Wiktionary:Pronunciation_key|SAMPA]]: /mi/
@@ -42,6 +42,20 @@ Dutch: mi
 
 ==== Translations ====
 *English: [[I]], [[me]]
+
+----
+
+==[[Ga]]==
+===Pronunciation===
+* [[Wiktionary:Pronunciation_key|IPA]]: /mi/
+* [[Wiktionary:Pronunciation_key|SAMPA]]: /mi/
+
+===Pronoun===
+'''mi'''
+# First person pronoun; refers to the person speaking.
+
+====Translations====
+* English: [[I]], [[me]]
 
 ----
 
@@ -94,6 +108,19 @@ Dutch: mi
 
 ----
 
+==Spanish==
+===Adjective===
+'''mi'''
+
+# [[my]]
+
+====Related terms====
+*[[me]]
+*[[mí]]
+*[[mío]]
+
+----
+
 ==[[Tok Pisin]]==
 ===Pronunciation===
 * [[Wiktionary:Pronunciation_key|IPA]]: /mi/
@@ -122,22 +149,7 @@ Dutch: mi
 ==== Translations ====
 *English: [[I]], [[me]]
 
-----
-
-==[[Ga]]==
-===Pronunciation===
-* [[Wiktionary:Pronunciation_key|IPA]]: /mi/
-* [[Wiktionary:Pronunciation_key|SAMPA]]: /mi/
-
-===Pronoun===
-'''mi'''
-# First person pronoun; refers to the person speaking.
-
-====Translations====
-* English: [[I]], [[me]]
-
 [[Category:English nouns]][[Category:Dutch nouns]][[Category:Esperanto language]][[Category:Hungarian personal pronouns]][[Category:Italian nouns]][[Category:Italian pronouns]][[Category:Scottish Gaelic language]][[Category:Tok Pisin pronouns]][[Category:Ga pronouns]]
-
 [[eo:Mi]]
 [[gl:Mi]]
 [[hr:Mi]]
